{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 260,
  "lineage": "fa89264a-caab-7cbc-4666-42d707fe8001",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "Load-Balancer-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/frontendIPConfigurations/LB-FRONT",
                "name": "LB-FRONT",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/publicIPAddresses/publicIPForLB"
              }
            ],
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "location": "westus",
            "name": "loadBalancer",
            "resource_group_name": "Weight-Tracker-App",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.Public_IP",
            "azurerm_resource_group.Weight-Tracker-App"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "LB-Back",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.Load-Balancer-app",
            "azurerm_public_ip.Public_IP",
            "azurerm_resource_group.Weight-Tracker-App"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbProbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/probes/tcpProbe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "tcpProbe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.Load-Balancer-app",
            "azurerm_public_ip.Public_IP",
            "azurerm_resource_group.Weight-Tracker-App"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "LoadBalancerRule8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/frontendIPConfigurations/LB-FRONT",
            "frontend_ip_configuration_name": "LB-FRONT",
            "frontend_port": 8080,
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/port_8080",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "port_8080",
            "probe_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/probes/tcpProbe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.Load-Balancer-app",
            "azurerm_lb_backend_address_pool.LB-Back",
            "azurerm_lb_probe.lbProbe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VM-APP-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC0",
            "internal_domain_name_suffix": "5zt0lcuidxpuvixet2w0gskpzh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "VM-APP-SUB",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/AppSubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-02-E8-61",
            "name": "VM-APP-NIC0",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "Weight-Tracker-App",
            "virtual_machine_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Compute/virtualMachines/VM-APP-SERVER0"
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App",
            "azurerm_subnet.AppSubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC1",
            "internal_domain_name_suffix": "5zt0lcuidxpuvixet2w0gskpzh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "VM-APP-SUB",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/AppSubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-02-E1-D7",
            "name": "VM-APP-NIC1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Weight-Tracker-App",
            "virtual_machine_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Compute/virtualMachines/VM-APP-SERVER1"
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App",
            "azurerm_subnet.AppSubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC2",
            "internal_domain_name_suffix": "5zt0lcuidxpuvixet2w0gskpzh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "VM-APP-SUB",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/AppSubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-02-E0-60",
            "name": "VM-APP-NIC2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "Weight-Tracker-App",
            "virtual_machine_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Compute/virtualMachines/VM-APP-SERVER2"
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App",
            "azurerm_subnet.AppSubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VM-DB-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-DB-NIC0",
            "internal_domain_name_suffix": "5zt0lcuidxpuvixet2w0gskpzh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "VM-DB-SUB",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/DBSubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-02-EA-B5",
            "name": "VM-DB-NIC0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Weight-Tracker-App",
            "virtual_machine_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Compute/virtualMachines/VM-DB-SERVER"
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App",
            "azurerm_subnet.DBSubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "LB-BACK-ASSAIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC0/ipConfigurations/VM-APP-SUB|/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "VM-APP-SUB",
            "network_interface_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC0"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.LB-Back",
            "azurerm_network_interface.VM-APP-NIC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC1/ipConfigurations/VM-APP-SUB|/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "VM-APP-SUB",
            "network_interface_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC1"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.LB-Back",
            "azurerm_network_interface.VM-APP-NIC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC2/ipConfigurations/VM-APP-SUB|/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "VM-APP-SUB",
            "network_interface_id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkInterfaces/VM-APP-NIC2"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.LB-Back",
            "azurerm_network_interface.VM-APP-NIC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "APP-NET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkSecurityGroups/APP-NET-NSG",
            "location": "westus",
            "name": "APP-NET-NSG",
            "resource_group_name": "Weight-Tracker-App",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "PORT_22",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "PORT_8080",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "8080",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DB-NET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/networkSecurityGroups/DB-NET-NSG",
            "location": "westus",
            "name": "DB-NET-NSG",
            "resource_group_name": "Weight-Tracker-App",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "PORT_5432",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "5432",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny_all",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Public_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/publicIPAddresses/publicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.59.117.14",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "publicIPForLB",
            "resource_group_name": "Weight-Tracker-App",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AppSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/AppSubnet",
            "name": "AppSubnet",
            "resource_group_name": "Weight-Tracker-App",
            "virtual_network_name": "Weight-Tracker-Network"
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DBSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/DBSubnet",
            "name": "DBSubnet",
            "resource_group_name": "Weight-Tracker-App",
            "virtual_network_name": "Weight-Tracker-Network"
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8aa567fe-1d88-4adf-a2e4-9f2da3494fcf",
            "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network",
            "location": "westus",
            "name": "Weight-Tracker-Network",
            "resource_group_name": "Weight-Tracker-App",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/AppSubnet",
                "name": "AppSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/DBSubnet",
                "name": "DBSubnet"
              },
              {
                "address_prefix": "10.0.3.0/26",
                "id": "/subscriptions/7f0e582d-04ad-48ec-81e6-ef58f134b3af/resourceGroups/Weight-Tracker-App/providers/Microsoft.Network/virtualNetworks/Weight-Tracker-Network/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Weight-Tracker-App"
          ]
        }
      ]
    }
  ]
}